# TranslationAPI

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  language_codes.json  main.py  pyproject.toml  requirements.txt  translator.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css  main.jsx
